Added tests for the ContainerBuilder and fixed the creation of services with multiple dependencies

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "dependencyinjection",
-  "version": "alpha",
+  "version": "0.0.1",
   "description": "a simple dic",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests --recursive --watch"
   },
   "author": "Jeroen Meeus",
   "license": "MIT",
