--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dependencyinjection",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "a simple dic",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "mocha tests --recursive --watch"
   },
